--- a/200477U_Assignment2.ipynb
+++ b/200477U_Assignment2.ipynb
@@ -13,6 +13,13 @@
     "img = cv2.imread(\"the_berry_farms_sunflower_field.jpeg\", cv2.IMREAD_REDUCED_COLOR_4)\n",
     "img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "\n",
+    "def LoG(sigma):\n",
+    "    #window size \n",
+    "    hw = 3*sigma \n",
+    "    X, Y = np.meshgrid(np.arange(-hw, hw + 1, 1), np.arange(-hw, hw + 1, 1))\n",
+    "    log = 1/(2*np.pi*sigma**2)*(X**2/(sigma**2) + Y**2/(sigma**2) - 2)*np.exp(-(X**2 + Y**2)/(2*sigma**2))\n",
+    "    return log\n",
+    "\n",
     "\n",
     "\n",
     "\n",
