--- a/200477U_Assignment2.ipynb
+++ b/200477U_Assignment2.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
     "# Parameters for Circle Estimation RANSAC\n",
     "s = 3  # Number of points to sample for each circle hypothesis\n",
     "t = 0.3 # Threshold of radial error\n",
-    "d = 30  # Minimum number of inliers to fit a circle\n",
+    "D = 40  # Minimum number of inliers to fit a circle\n",
     "k = 10000# Number of RANSAC iterations\n",
     "\n",
     "# Initialize variables to store the best circle model and inliers\n",
@@ -396,7 +396,7 @@
     "    inlier_count = np.sum(inliers)\n",
     "\n",
     "    # Check if the current set of inliers is the best one\n",
-    "    if inlier_count > max_inlier_count and inlier_count > d:\n",
+    "    if inlier_count > max_inlier_count and inlier_count > D:\n",
     "        max_inlier_count = inlier_count\n",
     "        best_circle_model = (x0_opt, y0_opt, r_opt)\n",
     "        best_inliers_c = inliers\n",
@@ -648,72 +648,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import least_squares\n",
-    "\n",
-    "\n",
-    "# Parameters for Circle Estimation RANSAC\n",
-    "s = 3  # Number of points to sample for each circle hypothesis\n",
-    "t = 0.1  # Threshold of radial error\n",
-    "d = 10  # Minimum number of inliers to fit a circle\n",
-    "\n",
-    "# Initialize variables to store the best circle model and inliers\n",
-    "best_circle_model = None\n",
-    "max_inlier_count = 0\n",
-    "best_inliers = []\n",
-    "\n",
-    "# Number of RANSAC iterations\n",
-    "k = 1000\n",
-    "\n",
-    "for i in range(k):\n",
-    "    # Randomly sample 's' points from the remnant dataset\n",
-    "    sample_indices = np.random.choice(remnant_points.shape[0], s, replace=False)\n",
-    "    sampled_points = remnant_points[sample_indices]\n",
-    "\n",
-    "    # Fit a circle to the sampled points using least squares\n",
-    "    def circle_residuals(params, points):\n",
-    "        x0, y0, r = params\n",
-    "        return np.sqrt((points[:, 0] - x0) ** 2 + (points[:, 1] - y0) ** 2) - r\n",
-    "\n",
-    "    initial_guess = [0.0, 0.0, 1.0]  # Initial guess for circle parameters [x0, y0, radius]\n",
-    "    result = least_squares(circle_residuals, initial_guess, args=(sampled_points,))\n",
-    "    circle_params = result.x\n",
-    "\n",
-    "    # Calculate the radial error for all points\n",
-    "    radial_errors = np.abs(np.sqrt((remnant_points[:, 0] - circle_params[0]) ** 2 + (remnant_points[:, 1] - circle_params[1]) ** 2) - circle_params[2])\n",
-    "\n",
-    "    # Count the number of inliers\n",
-    "    inliers = np.where(radial_errors < t)[0]\n",
-    "    inlier_count = len(inliers)\n",
-    "\n",
-    "    # Check if the current set of inliers is the best one\n",
-    "    if inlier_count > d and inlier_count > max_inlier_count:\n",
-    "        max_inlier_count = inlier_count\n",
-    "        best_circle_model = circle_params\n",
-    "        best_inliers = inliers\n",
-    "\n",
-    "# Retrieve the best circle model\n",
-    "x0, y0, radius = best_circle_model\n",
-    "\n",
-    "# Display the results\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(8, 8))\n",
-    "\n",
-    "# Plot the remnant points\n",
-    "ax.scatter(remnant_points[:, 0], remnant_points[:, 1])\n",
-    "\n",
-    "# Plot the best circle\n",
-    "circle = plt.Circle((x0, y0), radius, fill=False, color='m', label='Estimated Circle')\n",
-    "ax.add_patch(circle)\n",
-    "\n",
-    "# Plot the inliers\n",
-    "inlier_points = remnant_points[best_inliers]\n",
-    "ax.scatter(inlier_points[:, 0], inlier_points[:, 1], color='r', marker='o', label='Inliers')\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.show()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
